Fixed markup and overflow on sections

--- a/src/structures/_section.scss
+++ b/src/structures/_section.scss
@@ -1,5 +1,6 @@
 @include b(section) {
 	margin-top: rhythm(8);
+	overflow-x: hidden;
 
 	@include m(tight) {
 		margin-top: rhythm(2);
